Created html of wordl

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 </head>
 
 <body>
-      <section>
-            <table class="table bg-primary">
+      <section id="table-container">
+            <table class="table">
                   <thead>
                         
                   </thead>
