--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <meta name="viewport"
             content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
-      <title>Jeopardy</title>
+      <title>Wordle Clone</title>
       <link href="https://fonts.googleapis.com/css?family=Copse&display=swap" rel="stylesheet">
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
             integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -13,17 +13,20 @@
 </head>
 
 <body>
-      <section id="table-container">
-            <table class="table">
-                  <thead>
-                        
-                  </thead>
-                  <tbody>
-
-                  </tbody>
-            </table>
-
-      </section>
+      <div id="container">
+            <div id="game">
+                  <header>
+                        <h1 class="title">
+                              Wordle
+                        </h1>
+                  </header>
+                  <div id="board-container">
+                        <div id="board">
+                              
+                        </div>
+                  </div>
+            </div>
+      </div>
 </body>
 <script src="https://unpkg.com/jquery"></script>
 <script src="https://unpkg.com/axios/dist/axios.js"></script>
